src/app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

:root {
	--bg-color-1:rgb(64,64,64);
	--bg-color-2:rgb(32,32,32);
	--bg-color-3:rgb(46,46,46);
	--bg-color-4:rgb(56,56,56);
	--bg-color-5:rgb(18,18,18);
	--font-color-1:rgb(255,255,255);
	--font-color-2:rgb(164,164,164);
	--font-color-3:yellow;
	--active-font-color-1:yellow;
	--active-link-color:yellow;
	--border-color-1:rgba(255,255,255,0.05);
	--border-color-2:rgba(255,255,255,0.125);
	--border-color-3:rgba(255,255,255,0.025);
	--max-width-1:90%;
	--team-color-none:rgb(0,0,0);
	--team-color-red:rgb(79,0,0);
	--team-color-blue:rgb(10,51,106);
	--team-color-green:rgb(0,56,0);
	--team-color-yellow:rgb(85,85,0);
	--purple:rgb(55,0,110);
	--margin-1:25px;
	--margin-2:10px;
	--font-size-small:12px;
	--padding-1:10px;
	--padding-2:5px;
	--padding-3:3px;
	--font-size-1:14px;
	--line-height-1:24px;
	--line-height-2:32px;
	--font-size-2:16px;
	--font-size-3:18px;
	--font-size-4:13px;
	--font-size-5:12px;
	--transition-1:background-color 0.5s;
	--width-1:90%;
	--width-2:75%;
	--width-3:66%;
	--width-4:50%;
	--max-table-width-1:1500px;
	--max-table-width-2:1200px;
	--max-table-width-3:1000px;
	--max-table-width-4:700px;
	--rich-box-width:350px;
}

.team-none{
	background-color:var(--team-color-none);
}

.team-red{
	background-color:var(--team-color-red);
}

.red-font{
	color:red;
}

.green-font{
	color:green;
}

.yellow-font{
	color:yellow;
}
.font-color-1{
	color:var(--font-color-1);
}


.team-blue{
	background-color:var(--team-color-blue);
}

.team-green{
	background-color:var(--team-color-green);
}

.team-yellow{
	background-color:var(--team-color-yellow);
}

*{
	margin:0;
	padding:0;
	font-family: "Montserrat", sans-serif;
}

table{
	border-collapse: collapse;
}

body{ 
	min-height: 100vh; 
	display: grid;
	grid-template-rows: auto 1fr auto;
	background-color:var(--bg-color-1);
  }


footer{ 
	padding:var(--padding-1);
	background:var(--bg-color-2); 
	color:var(--font-color-2);
	text-align:center;
	font-size:var(--font-size-small);
}

a{
	color:var(--font-color-1);
	text-decoration: none;
}

.center{
	margin-left:auto;
	margin-right:auto;
}


.padding-top{
	height:50px;
}

.text-left{
	text-align:left;
}

.text-center{
	text-align:center;
}

label{
	text-align:right;
	padding-right:var(--padding-1);
	color:var(--font-color-1);
	line-height:var(--line-height-2);
	font-size:var(--font-size-2);
}

form{
	text-align: center;
}

.form-row{
	display:grid;
	grid-template-columns: 50% 50%;
	max-width:1000px;
	margin-left:auto;
	margin-right:auto;
	font-size:20px;
	margin-bottom:var(--margin-2);
}

.form-label{
	text-align:right;
	padding-right:var(--padding-1);
	color:var(--font-color-1);
	font-size:var(--font-size-1);
	line-height: var(--line-height-1);
	padding:var(--padding-2);
}

.form-info{
	text-align: center;
	font-size:var(--font-size-1);
	color:var(--font-color-1);
	margin-bottom:var(--margin-1);
}

.textbox{
	font-size:var(--font-size-1);
	background-color:var(--bg-color-3);
	border:1px solid var(--border-color-1);
	color:var(--font-color-1);
	padding:3px;
}


.submit-button{
	display:inline-block;
	background-color: var(--bg-color-2);
	padding:var(--padding-1);
	color:var(--font-color-1);
	border:1px solid var(--border-color-1);
	font-size:var(--font-size-3);
	transition:var(--transition-1)
}

.warning-button{
	display:inline-block;
	background-color: var(--team-color-red);
	padding:var(--padding-1);
	color:var(--font-color-1);
	border:1px solid var(--border-color-1);
	font-size:var(--font-size-3);
	transition:var(--transition-1)
}

.submit-button:hover{
	background-color: var(--bg-color-4);
	cursor: pointer;
}

.warning-button:hover{
	cursor: pointer;
}

.margin-bottom-1{
	margin-bottom:var(--margin-1);
}

.margin-top-1{
	margin-top:var(--margin-1);
}

table{
    border-collapse: collapse;
    color:var(--font-color-1);
    margin-left:auto;
    margin-right:auto;
    font-size:14px;
    text-align: center;
    margin-bottom:var(--margin-1);
}

.table-title{
	background-color:var(--bg-color-5);
	color:var(--font-color-1);
	text-align: center;
	padding:var(--padding-1) 0px;
}


th, .admin-textarea-title{
    padding:var(--padding-1) var(--padding-3);
    color:yellow;
    font-weight:normal;
	background-color:var(--bg-color-5);
	border:1px solid var(--border-color-3);
	font-weight:400;
	font-size:14px;
}

th a{
	color:yellow;
}

th:hover{
    user-select: none;
}

td{
	border:1px solid var(--border-color-3);
	padding:var(--padding-3);
	font-size:var(--font-size-1);
	line-height:var(--line-height-1);
}

tr:nth-child(even){
    background-color:var(--bg-color-2);
}
tr:nth-child(odd){
    background-color:var(--bg-color-3);
}


tr:nth-child(even):hover, tr:nth-child(odd):hover{
	background-color:var(--bg-color-1);
}

.player-name-td{
	min-width:175px;
	width:175px;
}

.t-width-1{
	width:var(--width-1);
	max-width:var(--max-table-width-1);
}

.t-width-2{
	width:var(--width-1);
	max-width:var(--max-table-width-2);
}

.t-width-3{
	width:var(--width-1);
	max-width:var(--max-table-width-3);
}

.t-width-4{
	width:var(--width-1);
	max-width:var(--max-table-width-4);
}

.duo{
    display:grid;
    grid-template-columns: 1fr 1fr;   
}

.trio{
    display:grid;
    grid-template-columns: 1fr 1fr 1fr; 
}

.quad{
    display:grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
}

.mouse-over{
	position:absolute;
	background-color:var(--bg-color-5);
	padding:var(--padding-2);
	border:1px solid var(--border-color-2);
	color:var(--font-color-1);
	max-width:250px;
}

.mouse-over-title{
	font-size:var(--font-size-1);
	padding:var(--padding-1);
	font-weight:bold;
}

.hidden{
	display:none;
}

.hover:hover{
	cursor: pointer;
}

.font-small{
	font-size:var(--font-size-small);
}

.date{
	font-size:var(--font-size-small);
	color:var(--font-color-2);
}

.date a{
	color:var(--font-color-2);
}

select{
	background-color:var(--bg-color-3);
	color:var(--font-color-1);
	font-size:var(--font-size-1);
    line-height:var(--line-height-1);
	border:1px solid var(--border-color-1);
}

option{
	font-size:var(--font-size-1);
    line-height:var(--line-height-1);
}

.small-info{
	padding:var(--padding-1);
	color:var(--font-color-1);
	font-size:var(--font-size-small);
	text-align: center;
}

.tf-button{
	color:var(--font-color-1);
	font-size:var(--font-size-2);
	line-height: var(--line-height-1);
	padding:3px;
}

.tf-button:hover{
	user-select: none;
	cursor: pointer;
}

.true{
	background-color:var(--team-color-green);
	
}

.false{
	background-color:var(--team-color-red);
}

.warning{
	background-color:var(--team-color-yellow);
	color:var(--font-color-1);
	text-align:center;
	padding-bottom:var(--padding-1);
	margin-top:var(--margin-1);
	margin-bottom:var(--margin-1);
}

.warning-title{
	padding:var(--padding-1);
}

.ordinal{
	font-size:var(--font-size-small);
	color:var(--font-color-2);
}

.info{
	background-color:var(--bg-color-3);
	text-align: center;
	color:var(--font-color-1);
	padding:var(--padding-1);
	margin-bottom:var(--margin-1);
	font-size:var(--font-size-1);
	line-height: var(--line-height-1);
}

.loading{
	text-align: center;
	font-size: var(--font-size-small);
	color:var(--font-color-1);
	padding:var(--padding-1);
}

canvas{
	display:inline-block;
}

.dull{
    color:var(--font-color-2);
}

.match-sshot{
	max-width:66%;
}

.close-button{
	display:inline-block;
	margin-left:auto;
	position:fixed;
	right:0;
	padding:5px;
}

.close-button:hover{
	cursor: pointer;
}

.social-media-icon{
	width:64px;
	height:64px;
	padding:5px;
	margin-left:10px;
	margin-bottom:10px;
	transition: all 0.5s;
}

.social-media-icon:hover{
	background-color:rgba(255,255,255,0.2);
	cursor: pointer;
}

.perma-link{
	background-color:var(--team-color-green);
	padding:var(--padding-3);
	display:inline-block;
	margin-bottom:10px;
	color:var(--font-color-1);
	border: 1px solid var(--border-color-1);
}

.perma-link:hover{
	cursor: pointer;
	color:yellow;
}

.map-sshot{
	margin-left:auto;
	margin-right:auto;
	max-width:33vw;
	overflow:hidden;
	margin-bottom:var(--margin-1);
}

.map-sshot img{
	display: block;
	width: 100%;
	height: auto;
}

.tabs-wrapper{
	background-color:var(--bg-color-3);
	color:var(--font-color-1);
	text-align:center;
	margin-bottom:var(--margin-1);
	font-size: var(--font-size-small);
}

.tab{
    display:inline-block;
    padding:var(--padding-2) var(--padding-1);
    user-select: none;
}

.tab:hover{
    cursor:pointer;
    user-select:none;
    color:yellow;
}


.tab-selected{
	background-color:rgb(164,0,0);
}

.no-image{
	color:white;
	font-size:12px;
	text-transform:uppercase;
}

.sort-hover:hover{
	cursor: pointer;
}


.white{
	color:white;
}

.rich-outter{
	text-align:center;
	margin-top:var(--margin-1);
	margin-bottom:var(--margin-1);
	max-width:var(--max-width-1);
	margin-left:auto;
	margin-right:auto;
}

.rich-wrapper{
    display:inline-block;
	background-color:var(--bg-color-2);
	margin-right:var(--margin-2);
	margin-left:var(--margin-2);
	margin-bottom: var(--margin-2);
	width:var(--rich-box-width);
    border:1px solid var(--border-color-1);
    overflow: hidden;
    white-space: nowrap;
}

.rich-title{
	color:var(--font-color-1);
	padding:var(--padding-1);
    text-overflow: ellipsis;
    
}

.rich-info{
    color:var(--font-color-2);
    font-size:var(--font-size-4);
    line-height: var(--line-height-1);
    margin-bottom:var(--margin-2);
    text-overflow: ellipsis;
}

.admin-textarea-wrapper{
	width:90%;
	margin-left:auto;
	margin-right:auto;
	display:inline-block;
	overflow:hidden;
	background-color:var(--bg-color-2);
}

.admin-textarea-wrapper textarea{
	display:block;
	width:99%;
	padding-left:5px;
	font-size:var(--font-size-1);
	background-color:var(--bg-color-3);
	border:1px solid var(--border-color-1);
	color:var(--font-color-1);
	min-height:150px;
}

.welcome-message{
	text-align:center;
	color:var(--font-color-1);
	margin-bottom:var(--margin-1);
}

.welcome-message-link{
	text-decoration: underline;
	color:yellow;
}

.button{
	border:1px solid var(--border-color-1);
	color:white;
	padding:var(--padding-2);
}

.button:hover{
	cursor: pointer;
}

.b-down{
	background-color:var(--team-color-red);
	margin-right:var(--margin-2);
}

.b-up{
	background-color:var(--team-color-green);
}

.restore-default-button{
	display:inline-block;
	background-color: var(--team-color-red);
	padding:var(--padding-2);
	color:var(--font-color-1);
	border:1px solid var(--border-color-1);
	font-size:var(--font-size-4);
	transition:var(--transition-1);
	user-select: none;
}

.restore-default-button:hover{
	cursor: pointer;
}

.json-link{
	padding:var(--padding-2);
	text-align:center;
	font-size:var(--font-size-4);
	display:inline-block;
}

.json-title{
	color:var(--font-color-3);
	display:inline-block;
}


.fav{
	display:inline-block;
	margin-bottom: var(--margin-2);
	color:var(--font-color-1);
	border:1px solid var(--border-color-1);
	padding:var(--padding-3);
}

.fav:hover{
	cursor: pointer;
	user-select: none;
	color:yellow;
}

.fav-add{
	background-color:var(--team-color-green);
}

.fav-del{
	background-color:var(--team-color-red);
}

